--- a/PioneerTech.WebApp/UI/PioneerTechMasterPage.Master
+++ b/PioneerTech.WebApp/UI/PioneerTechMasterPage.Master
@@ -4,15 +4,20 @@
 
 <html>
 <head runat="server">
+    <link href="../Content/MainMasterPageStyleSheet.css" rel="stylesheet" />
     <title></title>
-    <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
 </head>
 <body>
-    <form id="form1" runat="server">
-        <div>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+    <form id="MainMasterPage" runat="server">
+        
+        <div id="Header" class="Header"></div>
+        <div id="NavigationPanel" class="NavigationPanel"></div>
+        <div id="Footer" class="Footer"></div>
+        <div id="Content" class="Content">
+            <div>
+            <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server">
             </asp:ContentPlaceHolder>
+        </div>
         </div>
     </form>
 </body>
