--- a/PioneerTech.WebApp/UI/PioneerTechMasterPage.Master
+++ b/PioneerTech.WebApp/UI/PioneerTechMasterPage.Master
@@ -5,20 +5,29 @@
 <html>
 <head runat="server">
     <link href="../Content/MainMasterPageStyleSheet.css" rel="stylesheet" />
-    <title></title>
+    <title>Pioneer Technologies</title>
 </head>
 <body>
     <form id="MainMasterPage" runat="server">
         
-        <div id="Header" class="Header"></div>
-        <div id="NavigationPanel" class="NavigationPanel"></div>
-        <div id="Footer" class="Footer"></div>
-        <div id="Content" class="Content">
-            <div>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server">
-            </asp:ContentPlaceHolder>
+        <div id="Header" class="Header">
+           <h1>Pioneer Technologies Inc</h1></div>       
+        <div id="Content" class="Content"><asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+            </asp:ContentPlaceHolder></div>
+        <div id="NavigationPanel" class="NavigationPanel">
+        <asp:Menu ID="Menu1" runat="server" Orientation="Vertical" CssClass="menu">
+    <Items>
+        <asp:MenuItem Text="Home" NavigateUrl="Home.aspx" />
+        <asp:MenuItem Text="EmployeeDetails" NavigateUrl="EmployeeDetails.aspx" />
+        <asp:MenuItem Text="EducationDetails" NavigateUrl="EducationalDetails.aspx" />
+        <asp:MenuItem Text="CompanyDetails" NavigateUrl="CompanyDetails.aspx" />
+        <asp:MenuItem Text="TechnicalDetails" NavigateUrl="TechnicalDetails.aspx" />
+        <asp:MenuItem Text="ProjectDetails" NavigateUrl="ProjectDetails.aspx" />
+    </Items>
+</asp:Menu>
         </div>
-        </div>
+            <div id="Footer" class="Footer"></div>
+        
     </form>
 </body>
 </html>
